# fastapi-inertia-examples

./: README.md
javascript/classic/backend/: main.py  pyproject.toml
javascript/classic/webapp/: package.json  vite.config.js
javascript/classic/webapp/src/: main.js
javascript/ssr/backend/: main.py  pyproject.toml
typescript/classic/backend/: main.py  pyproject.toml  requirements.in
typescript/ssr/backend/: main.py  pyproject.toml
